--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,17 @@
 @tailwind utilities;
 
 @layer base {
+  :root {
+    --navigation-height: 3rem
+  }
+
   html {
-    @apply bg-background font-sans;
+    @apply bg-background font-sans text-white;
+  }
+}
+
+@layer utilities {
+  .text-shadow {
+    text-shadow: rgb(0, 0, 0 / 56%) 0px 3px 12px;
   }
 }
